[FIXED] About section text center justified on mobile, payment address step height fixed on mobile [ADDED] String change

--- a/src/components/PaymentDialog/PaymentDialog.module.scss
+++ b/src/components/PaymentDialog/PaymentDialog.module.scss
@@ -4,9 +4,9 @@
     :global {
         .coin-logos-wrapper,
         .payment-address-wrapper {
-            height: 300px;
+            min-height: 300px;
             @include media-breakpoint-down(sm) {
-                height: 200px;
+                min-height: 200px;
             }
         }
         .coin-logos-wrapper {
